--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     White is building the World's #1 <strong class="font-semibold">Context Bank</strong>. We visually mine the web, transpile noise into signal, and deliver ultra-dense, AI-ready <code class="bg-gray-200 px-1.5 py-0.5 rounded text-lg font-mono">context</code> files.
                 </p>
                 <div class="mt-12 flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-6">
-                    <a href="#early-access-form" class="w-full sm:w-auto px-10 py-4 border border-transparent text-lg font-semibold rounded-lg shadow-md text-white bg-highlight-green hover-bg-highlight-green-darker transition-transform transform hover:scale-105">
+                    <a href="#invest" class="w-full sm:w-auto px-10 py-4 border border-transparent text-lg font-semibold rounded-lg shadow-md text-white bg-highlight-green hover-bg-highlight-green-darker transition-transform transform hover:scale-105">
                         Request Early Access
                     </a>
                     <a href="#invest" class="w-full sm:w-auto text-lg font-semibold text-emerald-600 hover:text-emerald-500 transition-colors">
